# PoolTerminal

./: .gitignore  DESIGN.md  HARDFORK.md  MANUAL.md  MANUAL_2026-06-15.md  README.md  README.md.20260629_192530.bak  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  lib.rs  localrun.rs  main.rs  pg.rs  ssh.rs  sshkeys.rs
src/data/: blockfrost-query.js  capabilities.js  contract.js  dbsync-query.js  demo.js  geo-query.js.20260629_160738.bak  host-query.js  index.js  koios-history.js  koios-meter.js  koios-query.js  koios-token.js  live.js  metrics-query.js  node-probe.js  notif-settings.js  peers-query.js  pg-transport.js  read-model.js  relay-probe.js  relay-probe.js.20260629_160738.bak  relay-probe.js.20260629_164315.bak  session.js  tauri.js
src/styles/: app.css  components.css  design-tokens.css
src/ui/: block-production.js  chain-pulse.js  dialog.js  format.js  mempool.js  notif-format.js  now-gauges.js  now-hero.js  peers-panel.js  relay-map.js  tickertape.js  toast.js  upcoming-blocks.js
src/views/: about.js  connect.js  data-sources.js  delegators.js  history.js  map.js  node-health.js  notifications.js  now.js  now2.js  relay.js  relay.js.20260629_121052.bak  relay.js.20260629_132830.bak  relay.js.20260629_142654.bak  relay.js.20260629_144105.bak  relay.js.20260629_145122.bak  relay.js.20260629_154941.bak  relay.js.20260629_160738.bak  relay.js.20260629_161141.bak  relay.js.20260629_161609.bak  relay.js.20260629_162421.bak  relay.js.20260629_164315.bak  relay.js.20260629_165151.bak  relay.js.20260629_165508.bak  relay.js.20260629_180726.bak  relay.js.20260629_191856.bak  settings.js  wizard.js
