[package]
name = "poolterminal"
version = "0.1.0"
description = "Bloomberg-terminal-style desktop dashboard for Cardano stake pool operators"
authors = ["GNP1-dev"]
edition = "2021"

[lib]
name = "poolterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH layer
russh = "0.61"
tokio = { version = "1", features = ["sync", "time", "io-util", "net", "rt-multi-thread", "macros"] }
anyhow = "1"

# Future phases will add:
#   rusqlite      — local cache (bundled feature, no sysdep)
#   tracing       — structured logging
